--- a/www/index.html
+++ b/www/index.html
@@ -32,7 +32,7 @@
                     <div class="about-loading">Loading...</div>
                 </div>
                 <div class="logo">
-                    <img src="src/img/loading-logo.png" alt="LOCAPPY">
+                    <img src="src/img/header-logo.png" alt="LOCAPPY">
                 </div>
             </div>
         </div>
